--- a/src/pages/global-styles.css
+++ b/src/pages/global-styles.css
@@ -35,10 +35,8 @@ body {
   padding: 0;
 }
 
-
 a {
   font-family: "Helvetica CE", Helvetica, sans-serif;
-  font-weight: bold;
   color: black;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -100,11 +98,10 @@ h4 {
   width: 100%;
   position: absolute;
   pointer-events: none;
-  top:0;
+  top: 0;
 }
 
 /*Projects*/
-
 
 .project__article__wrapper {
   padding: 60px 7.5vw;
@@ -156,47 +153,48 @@ h4 {
 
 .homepage__hero-wrapper {
   height: 70vh;
-  max-height:900px;
+  max-height: 900px;
   margin-top: 5vw;
   vertical-align: middle;
   position: relative;
 }
 
 .homepage__hero-group {
-  display:grid;
+  display: grid;
   width: 85%;
   max-width: 672px;
-  max-height:480px;
-  margin:auto;
+  max-height: 480px;
+  margin: auto;
   vertical-align: middle;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  grid-template-rows:auto 20fr auto;
+  grid-template-rows: auto 20fr auto;
   row-gap: 5%;
 }
 
 .homepage__hero__h1 {
   font-size: 30px;
-  line-height: 1;
-  margin:0 0;
-  grid-row:1/2;
+  line-height: 1.3;
+  margin: 0 0;
+  grid-row: 1/2;
 }
 
 .homepage__hero__p {
   max-width: 492px;
   margin: auto;
-  
-  grid-row:2/3;
+
+  grid-row: 2/3;
 }
 
 .homepage__hero__h2 {
   max-width: 400px;
+  line-height: 1.3;
   margin-left: auto;
+  margin-top:0;
   text-align: right;
-  
-  grid-row:3/4;
+  grid-row: 3/4;
 }
 
 .arrow-down {
@@ -228,31 +226,31 @@ h4 {
   margin: 0 auto 60px;
   width: 30vw;
   max-width: 300px;
-  min-width:200px;
+  min-width: 200px;
   height: 30vw;
   max-height: 300px;
-  min-height:200px;
+  min-height: 200px;
   border-radius: 50%;
 }
 
-.download-cv{
+.download-cv {
   text-align: center;
   width: 200px;
-  padding:20px;
-  margin:auto;
-  display:block;
+  padding: 20px;
+  margin: auto;
+  display: block;
 }
 
-.download-cv:hover {    
+.download-cv:hover {
   box-shadow: 0px 10px 70px rgba(0, 0, 0, 0.05);
   outline: 1px solid black;
   transition: all 0.4s cubic-bezier(0.77, 0, 0.175, 1);
 }
 
-.download-cv:active {    
+.download-cv:active {
   box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.05);
   outline: 2px solid black;
-  background-color:rgb(250, 250, 250);
+  background-color: rgb(250, 250, 250);
 }
 
 .download-cv__text {
@@ -260,11 +258,12 @@ h4 {
   width: 130px;
   margin: 0 auto 10px auto;
   text-decoration: none;
+  font-weight: bold;
 }
 
 .download-cv:hover .download-cv__text {
-  text-decoration:underline;
-} 
+  text-decoration: underline;
+}
 
 .download-cv__icon {
   display: block;
@@ -272,12 +271,10 @@ h4 {
   transition: all 0.4s cubic-bezier(0.77, 0, 0.175, 1);
 }
 
-.download-cv:hover .download-cv__icon{
+.download-cv:hover .download-cv__icon {
   margin: 5px auto 0;
   transition: all 0.4s cubic-bezier(0.77, 0, 0.175, 1);
-} 
-
-
+}
 
 /*flair*/
 
@@ -327,158 +324,159 @@ h4 {
 
 /*comms*/
 
-.harika__grid{
-  display:grid;
-  width:90vw;
-  max-width:1134px;
+.harika__grid {
+  display: grid;
+  width: 90vw;
+  max-width: 1134px;
   position: relative;
   margin: 120px auto 60px auto;
   grid-template-columns: 6fr 3fr;
   grid-gap: 1rem;
 }
 
-.harika__grid__image-1{
+.harika__grid__image-1 {
   width: 100%;
   grid-column: 1 / 2;
   grid-row: 1 / 4;
 }
 
-.harika__grid__image-2{
+.harika__grid__image-2 {
   width: 100%;
   grid-column: 2 / 3;
   grid-row: 2 / 3;
 }
 
-.harika__grid__image-3{
+.harika__grid__image-3 {
   width: 100%;
   grid-column: 2 / 3;
   grid-row: 3 / 4;
 }
 
+.saporita__grid {
+  display: grid;
+  width: 90vw;
+  max-width: 1134px;
+  position: relative;
+  margin: 120px auto 60px auto;
+  grid-template-columns: 1.3fr 1fr 1fr 1fr;
+  grid-gap: 1rem;
+}
 
-
-.saporita__grid{
-      display:grid;
-      width:90vw;
-      max-width:1134px;
-      position: relative;
-      margin: 120px auto 60px auto;
-      grid-template-columns: 1.3fr 1fr 1fr 1fr;
-      grid-gap: 1rem;
-  }
-
-.saporita__grid__image-1{
+.saporita__grid__image-1 {
   width: 100%;
   grid-column: 1 / 2;
   grid-row: 1 / 4;
 }
 
-.saporita__grid__image-2{
+.saporita__grid__image-2 {
   width: 100%;
   grid-column: 2 / 5;
   grid-row: 1 / 2;
 }
 
-.saporita__grid__image-3{
+.saporita__grid__image-3 {
   width: 100%;
   grid-column: 3 / 4;
   grid-row: 2 / 4;
 }
 
-
-.sacrem__grid{
-  display:grid;
-  width:90vw;
-  max-width:1134px;
+.sacrem__grid {
+  display: grid;
+  width: 90vw;
+  max-width: 1134px;
   position: relative;
   margin: 120px auto 60px auto;
   grid-template-columns: 4fr 3fr;
   grid-gap: 1rem;
 }
 
-.sacrem__grid__image-1{
-width: 100%;
-grid-row: 2 / 4;
+.sacrem__grid__image-1 {
+  width: 100%;
+  grid-row: 2 / 4;
 }
 
-.sacrem__grid__image-2{
-width: 100%;
-grid-row: 1 / 4;
+.sacrem__grid__image-2 {
+  width: 100%;
+  grid-row: 1 / 4;
 }
 
-.sintesi__grid{
-  display:grid;
-  width:90vw;
-  max-width:1134px;
+.sintesi__grid {
+  display: grid;
+  width: 90vw;
+  max-width: 1134px;
   position: relative;
   margin: 120px auto 60px auto;
   grid-template-columns: 6fr 3fr;
   grid-gap: 1rem;
 }
 
-.sintesi__grid__image-1{
-width: 100%;
-grid-row: 1/ 4;
+.sintesi__grid__image-1 {
+  width: 100%;
+  grid-row: 1/ 4;
 }
 
-.sintesi__grid__image-2{
-width: 100%;
-grid-row: 2 / 4;
+.sintesi__grid__image-2 {
+  width: 100%;
+  grid-row: 2 / 4;
 }
-
 
 /*responsive*/
 
-@media only screen and (max-width: 500px){
-  
-body {
-  font-size: 20px;
-  line-height: 1.8;
- 
-}
+@media only screen and (max-width: 500px) {
+  body {
+    font-size: 18px;
+    line-height: 1.6;
+  }
 
+  h1 {
+    font-size: 30px;
+    line-height: 1.4;
+  }
 
-h1 {
-  font-size: 30px;
-  line-height: 1.4;
-}
+  h2 {
+    font-size: 26px;
+    line-height: 1.4;
+  }
 
-h2 {
+  h3 {
+    font-size: 22px;
+    line-height: 1.4;
+  }
 
-  font-size: 26px;
-  line-height: 1.4;
-}
+  h4 {
+    font-size: 16px;
+    line-height: 1.4;
+  }
 
-h3 {
-  font-size: 22px;
-  line-height: 1.4;
-}
+  .homepage__hero__h2 {
+      font-size: 24px;
+      line-height: 1.4;
+      text-align: left;
+  }
 
-h4 {
+  .homepage__page {
+    
+    width: 95%;
+    }
+    .project__article__page {
+      width: 90vw;}
 
-  font-size: 16px;
-  line-height: 1.4;
-}
+  .project__article__p {
+    font-size: 18px;
+    line-height: 1.8;
+    max-width: 900px;
+  }
 
-.project__article__p {
-  font-size: 18px;
-  line-height: 1.8;
-  max-width: 900px;
-}
+  .gimble__quote {
+    font-size: 24px;
+    line-height: 1.8;
+  }
 
-.gimble__quote {
-  font-size: 24px;
-  line-height: 1.8;
+  .gimble__quote__div {
+    max-width: 80vw;
+  }
 
-}
-
-.gimble__quote__div {
-  max-width: 80vw;
-}
-
-  .hide-responsive{
-    display:none;
-
-}
-
+  .hide-responsive {
+    display: none;
+  }
 }
