--- a/src/components/homepage__card.css
+++ b/src/components/homepage__card.css
@@ -58,9 +58,7 @@
 .homepage__card__logo {
   object-fit:cover;
   width:100%;
-  max-height:100%;
   align-self: center;
- 
   grid-column: 2/3;
   grid-row: 1/3;
 }
@@ -122,4 +120,8 @@
   .homepage__card {
     width: 80%;
    }
+
+   .homepage__card h2 {
+    padding: 2rem 0 0.5rem 0;
+  }
 }
