--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -39,3 +39,25 @@
     grid-column:1/4;
     grid-row:2/3;
 }
+
+@media only screen and (max-width: 500px){
+    .footer {
+        text-align: center;
+        grid-template-columns: auto;
+        grid-template-rows: 60px 100px 60px;
+        margin:80px auto 0 auto;
+    }
+
+        .footer__linkedin{
+            grid-column: 1/4;
+            grid-row:2/3;}
+            
+        .footer__email{
+            grid-column: 1/4;
+
+        }
+
+            .footer__love-text{
+    grid-row:3/4;
+}
+    }
