--- a/src/pages/global-styles.css
+++ b/src/pages/global-styles.css
@@ -331,24 +331,31 @@ h4 {
   margin: 120px auto 60px auto;
   grid-template-columns: 6fr 3fr;
   grid-gap: 1rem;
+  grid-template-areas: 
+    'image1 .'
+    'image1 image2'
+    'image1 image3';
 }
 
 .harika__grid__image-1 {
   width: 100%;
   grid-column: 1 / 2;
   grid-row: 1 / 4;
+  grid-area: image1;
 }
 
 .harika__grid__image-2 {
   width: 100%;
   grid-column: 2 / 3;
   grid-row: 2 / 3;
+  grid-area: image2;
 }
 
 .harika__grid__image-3 {
   width: 100%;
   grid-column: 2 / 3;
   grid-row: 3 / 4;
+  grid-area: image3;
 }
 
 .saporita__grid {
@@ -357,26 +364,33 @@ h4 {
   max-width: 1134px;
   position: relative;
   margin: 120px auto 60px auto;
-  grid-template-columns: 1.3fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 0.5fr 1fr 0.5fr;
   grid-gap: 1rem;
+  grid-template-areas: 
+  'image1 image2 image2 image2'
+  'image1 . image3 .';
 }
+
 
 .saporita__grid__image-1 {
   width: 100%;
   grid-column: 1 / 2;
-  grid-row: 1 / 4;
+  grid-row: 1 / 3;
+  grid-area: image1;
 }
 
 .saporita__grid__image-2 {
   width: 100%;
   grid-column: 2 / 5;
   grid-row: 1 / 2;
+  grid-area: image2;
 }
 
 .saporita__grid__image-3 {
   width: 100%;
   grid-column: 3 / 4;
-  grid-row: 2 / 4;
+  grid-row: 2 / 3;
+  grid-area: image3;
 }
 
 .sacrem__grid {
@@ -387,16 +401,22 @@ h4 {
   margin: 120px auto 60px auto;
   grid-template-columns: 4fr 3fr;
   grid-gap: 1rem;
+  grid-template-areas: 
+  '. image2'
+  'image1 image2'
+  'image1 image2';
 }
 
 .sacrem__grid__image-1 {
   width: 100%;
   grid-row: 2 / 4;
+  grid-area: image1;
 }
 
 .sacrem__grid__image-2 {
   width: 100%;
   grid-row: 1 / 4;
+  grid-area: image2;
 }
 
 .sintesi__grid {
@@ -407,16 +427,22 @@ h4 {
   margin: 120px auto 60px auto;
   grid-template-columns: 6fr 3fr;
   grid-gap: 1rem;
+  grid-template-areas: 
+  'image1 .'
+  'image1 image2'
+  'image1 image2';
 }
 
 .sintesi__grid__image-1 {
   width: 100%;
   grid-row: 1/ 4;
+  grid-area: image1;
 }
 
 .sintesi__grid__image-2 {
   width: 100%;
   grid-row: 2 / 4;
+  grid-area: image2;
 }
 
 @media only screen and (min-width: 501px) {
@@ -485,4 +511,56 @@ h4 {
   .hide-responsive {
     display: none;
   }
+
+
+  .harika__grid{  
+  margin: 0 auto 20px auto;
+  grid-template-columns: auto;
+  grid-template-rows: auto auto auto;
+  grid-template-areas: 
+  'image1'
+  'image3'
+  'image2'
+  ;
+  }
+
+
+.saporita__grid{  
+  margin: 0 auto 20px auto;
+  grid-template-columns: auto;
+  grid-template-rows: auto auto;
+  grid-template-areas: 
+  'image2'
+  'image1'
+  'image3'
+  ;
 }
+
+
+.sintesi__grid{  
+  margin: 0 auto 20px auto;
+  grid-template-columns: auto;
+  grid-template-rows: auto auto;
+  grid-template-areas: 
+  'image1'
+  'image2'
+  ;
+}
+  
+  .saporita__grid__image-3{
+    display: none;
+  }
+
+
+  .sacrem__grid{  
+    margin: 0 auto 20px auto;
+    grid-template-columns: auto;
+    grid-template-rows: auto auto;
+    grid-template-areas: 
+    'image1'
+    'image2'
+    ;
+  }
+
+}
+
