--- a/src/components/shelter__card.css
+++ b/src/components/shelter__card.css
@@ -1,136 +1,123 @@
-
 .shelter__card {
-    display: grid;
-    width:80%;
-    max-width:810px;
-    position: relative;
-    margin: 0 auto 60px auto;
-    padding: 50px 7% 50px 7%;
-    grid-template-columns: 35% auto;
-    grid-template-rows: 26px 26px auto auto;
-    grid-template-areas: 
-    'image date'
-    'image location'
-    'image title'
-    'image paragraph' ;
-    grid-column-gap:3vw;
-    outline:1px white;
-    transition: all 0.4s cubic-bezier(0.77, 0, 0.175, 1);
-
-   
+  display: grid;
+  width: 80%;
+  max-width: 810px;
+  position: relative;
+  margin: 0 auto 60px auto;
+  padding: 50px 7% 50px 7%;
+  grid-template-columns: 35% auto;
+  grid-template-rows: 26px 26px auto auto;
+  grid-template-areas:
+    "image date"
+    "image location"
+    "image title"
+    "image paragraph";
+  grid-column-gap: 3vw;
+  outline: 1px white;
+  transition: all 0.4s cubic-bezier(0.77, 0, 0.175, 1);
 }
-
 
 .shelter__card:hover {
-    box-shadow: 0px 10px 70px rgba(0, 0, 0, 0.05);
-    outline: 1px solid black;
-    transition: all 0.4s cubic-bezier(0.77, 0, 0.175, 1);
-    transform: translateZ(0); /*for older browsers*/
-    will-change: transform;
+  box-shadow: 0px 10px 70px rgba(0, 0, 0, 0.05);
+  outline: 1px solid black;
+  transition: all 0.4s cubic-bezier(0.77, 0, 0.175, 1);
+  transform: translateZ(0); /*for older browsers*/
+  will-change: transform;
 }
 
-.shelter__card:active {    
-    box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.05);
-    outline: 2px solid black;
-    background-color:rgba(0, 0, 0, 0.01);
+.shelter__card:active {
+  box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.05);
+  outline: 2px solid black;
+  background-color: rgba(0, 0, 0, 0.01);
 }
 
 .shelter__card__arrow {
-    float:right;
-    margin:5px 5px 0 auto;
-    width:25px;
-    height:25px;
-    grid-column:2/3;
-    grid-row:1/2;
-    transform: rotate(225deg);
-    transition: all 0.4s cubic-bezier(0.77, 0, 0.175, 1);
-    grid-area: date;
+  float: right;
+  margin: 5px 5px 0 auto;
+  width: 25px;
+  height: 25px;
+  grid-column: 2/3;
+  grid-row: 1/2;
+  transform: rotate(225deg);
+  transition: all 0.4s cubic-bezier(0.77, 0, 0.175, 1);
+  grid-area: date;
 }
 
 .shelter__card:hover .shelter__card__arrow {
-    margin:0 0 0 auto;
-    transition: all 0.4s cubic-bezier(0.77, 0, 0.175, 1);
-
+  margin: 0 0 0 auto;
+  transition: all 0.4s cubic-bezier(0.77, 0, 0.175, 1);
 }
 
-.shelter__card__year{
-    margin-top:0px;
-    grid-row: 1/2;
-    grid-column: 2/3;
-    font-weight: normal;
-    grid-area: date;
+.shelter__card__year {
+  margin-top: 0px;
+  grid-row: 1/2;
+  grid-column: 2/3;
+  font-weight: normal;
+  grid-area: date;
 }
 
-.shelter__card__location{
-    margin-top:0;
-    grid-row: 2/3;
-    grid-column: 2/3;
-    font-weight: normal;
-    grid-area: location;
-    
+.shelter__card__location {
+  margin-top: 0;
+  grid-row: 2/3;
+  grid-column: 2/3;
+  font-weight: normal;
+  grid-area: location;
 }
 
- .shelter__card h4 {
-    text-decoration:none;
+.shelter__card h4 {
+  text-decoration: none;
 }
 
 .shelter__card h2 {
-    font-weight:700;
-    margin:0;
-    padding:20px 0 20px 0;
-    grid-row: 3/4;
-    grid-column: 2/3;
-    text-decoration: none;
-    grid-area: title;
+  font-weight: 700;
+  margin: 0;
+  padding: 20px 0 20px 0;
+  grid-row: 3/4;
+  grid-column: 2/3;
+  text-decoration: none;
+  grid-area: title;
 }
 
 .shelter__card:hover h2 {
-    text-decoration:underline;
+  text-decoration: underline;
 }
-
 
 .shelter__card p {
-    font-family: 'Rosarivo', serif;
-    text-rendering: optimizeLegibility;
-    -webkit-font-smoothing: antialiased;
- 
-    font-weight:400;
-    margin:0;
-    padding-bottom:20px;
-    grid-column: 2/3;
-    grid-row: 4/5;
-    line-height:180%;
-    text-decoration:none;
-    grid-area: paragraph;
+  font-family: "Rosarivo", serif;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+
+  font-weight: 400;
+  margin: 0;
+  padding-bottom: 20px;
+  grid-column: 2/3;
+  grid-row: 4/5;
+  line-height: 180%;
+  text-decoration: none;
+  grid-area: paragraph;
 }
 
-
-
-
-.shelter__card__image{
-    width: 100%;
-    -o-object-fit: cover;
-       object-fit: cover;
-    grid-column:1/2;
-    grid-row:1/5;
-    margin: auto;
-    align-self: center;
-    grid-area: image;
+.shelter__card__image {
+  width: 100%;
+  -o-object-fit: cover;
+  object-fit: cover;
+  grid-column: 1/2;
+  grid-row: 1/5;
+  margin: auto;
+  align-self: center;
+  grid-area: image;
 }
 
-
-@media only screen and (max-width: 500px){
-    .shelter__card{  
+@media only screen and (max-width: 500px) {
+  .shelter__card {
     margin: 0 auto 40px auto;
     grid-template-columns: auto;
     grid-template-rows: 26px 40px auto auto auto;
-    grid-template-areas: 
-    'date'
-    'location'
-    'image'
-    'title' 
-    'paragraph' ;
- 
-}
-
+    grid-template-areas:
+      "date"
+      "location"
+      "image"
+      "title"
+      "paragraph";
+  }
 }
