--- a/src/pages/global-styles.css
+++ b/src/pages/global-styles.css
@@ -1,7 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Rosarivo:400,400i");
 
-
-@import url('https://rsms.me/inter/inter.css');
+@import url("https://rsms.me/inter/inter.css");
 
 html
 /* move scrollbar out of page*/
@@ -68,7 +67,6 @@ h4 {
   color: #8b8b8b;
   font-weight: 400;
   text-transform: uppercase;
-
 }
 
 .background {
@@ -79,8 +77,8 @@ h4 {
   filter: blur(30px);
   transform: translateZ(0); /*for older browsers*/
   will-change: transform;
+  pointer-events: none;
 }
-
 
 .background-svg {
   position: relative;
@@ -132,7 +130,6 @@ h4 {
   max-width: 60vw;
   max-width: 900px;
   margin: 0 auto 60px auto;
-  
 }
 
 .image-m {
@@ -330,10 +327,10 @@ h4 {
   margin: 120px auto 60px auto;
   grid-template-columns: 6fr 3fr;
   grid-gap: 1rem;
-  grid-template-areas: 
-    'image1 .'
-    'image1 image2'
-    'image1 image3';
+  grid-template-areas:
+    "image1 ."
+    "image1 image2"
+    "image1 image3";
 }
 
 .harika__grid__image-1 {
@@ -365,11 +362,10 @@ h4 {
   margin: 120px auto 60px auto;
   grid-template-columns: 1fr 0.5fr 1fr 0.5fr;
   grid-gap: 1rem;
-  grid-template-areas: 
-  'image1 image2 image2 image2'
-  'image1 . image3 .';
+  grid-template-areas:
+    "image1 image2 image2 image2"
+    "image1 . image3 .";
 }
-
 
 .saporita__grid__image-1 {
   width: 100%;
@@ -400,10 +396,10 @@ h4 {
   margin: 120px auto 60px auto;
   grid-template-columns: 4fr 3fr;
   grid-gap: 1rem;
-  grid-template-areas: 
-  '. image2'
-  'image1 image2'
-  'image1 image2';
+  grid-template-areas:
+    ". image2"
+    "image1 image2"
+    "image1 image2";
 }
 
 .sacrem__grid__image-1 {
@@ -426,10 +422,10 @@ h4 {
   margin: 120px auto 60px auto;
   grid-template-columns: 6fr 3fr;
   grid-gap: 1rem;
-  grid-template-areas: 
-  'image1 .'
-  'image1 image2'
-  'image1 image2';
+  grid-template-areas:
+    "image1 ."
+    "image1 image2"
+    "image1 image2";
 }
 
 .sintesi__grid__image-1 {
@@ -481,9 +477,9 @@ h4 {
   }
 
   .homepage__hero__h2 {
-
     text-align: left;
-    margin-left:0;}
+    margin-left: 0;
+  }
 
   .homepage__page {
     width: 95%;
@@ -492,9 +488,8 @@ h4 {
     width: 90vw;
   }
 
-  .project__article__wrapper{
-    padding:40px 7.5vw;
-    
+  .project__article__wrapper {
+    padding: 40px 7.5vw;
   }
 
   .gimble__quote {
@@ -511,55 +506,49 @@ h4 {
     display: none;
   }
 
-
-  .harika__grid{  
-  margin: 0 auto 20px auto;
-  grid-template-columns: auto;
-  grid-template-rows: auto auto auto;
-  grid-template-areas: 
-  'image1'
-  'image3'
-  'image2'
-  ;
+  .background {
+    visibility: hidden;
   }
 
-
-.saporita__grid{  
-  margin: 0 auto 20px auto;
-  grid-template-columns: auto;
-  grid-template-rows: auto auto;
-  grid-template-areas: 
-  'image2'
-  'image1'
-  'image3'
-  ;
-}
-
-
-.sintesi__grid{  
-  margin: 0 auto 20px auto;
-  grid-template-columns: auto;
-  grid-template-rows: auto auto;
-  grid-template-areas: 
-  'image1'
-  'image2'
-  ;
-}
-  
-  .saporita__grid__image-3{
-    display: none;
+  .harika__grid {
+    margin: 0 auto 20px auto;
+    grid-template-columns: auto;
+    grid-template-rows: auto auto auto;
+    grid-template-areas:
+      "image1"
+      "image3"
+      "image2";
   }
 
-
-  .sacrem__grid{  
+  .saporita__grid {
     margin: 0 auto 20px auto;
     grid-template-columns: auto;
     grid-template-rows: auto auto;
-    grid-template-areas: 
-    'image1'
-    'image2'
-    ;
+    grid-template-areas:
+      "image2"
+      "image1"
+      "image3";
   }
 
-}
+  .sintesi__grid {
+    margin: 0 auto 20px auto;
+    grid-template-columns: auto;
+    grid-template-rows: auto auto;
+    grid-template-areas:
+      "image1"
+      "image2";
+  }
 
+  .saporita__grid__image-3 {
+    display: none;
+  }
+
+  .sacrem__grid {
+    margin: 0 auto 20px auto;
+    grid-template-columns: auto;
+    grid-template-rows: auto auto;
+    grid-template-areas:
+      "image1"
+      "image2";
+  }
+}
